--- a/Week02/style.css
+++ b/Week02/style.css
@@ -5,13 +5,14 @@ body{
 .mid_section{
     display: block;
     text-align: center;
-    padding:50% 0;
+    padding:20% 0;
 }
 
 body {
     background-image: url('./Photo0.PNG');
     background-repeat: no-repeat;
     background-position:center;
+    background-size: 600px 600px;
   }
 
 p{
@@ -28,7 +29,7 @@ p{
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    transition-duration: 0.6s;
+    transition-duration: 0.5s;
     cursor: pointer;
   }
   
