--- a/Week02/style.css
+++ b/Week02/style.css
@@ -23,14 +23,17 @@ p{
 .button {
     border: none;
     color: #696969;
-    padding: 16px 32px;
-    text-align: center;
+    padding: 12px 14px;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     transition-duration: 0.5s;
     cursor: pointer;
+    height:120px;
+    width:280px;
+    position: absolute;
+    left: 25%;
   }
   
   .button1 {
