--- a/Project01/mystyle.css
+++ b/Project01/mystyle.css
@@ -1,10 +1,20 @@
 body{
     background-color: lavenderblush;
+    
 }
 
 .page_imgSection{
     text-align: center;
 }
+
+.p5Canvas{
+  margin: 0;
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+  /* This centers our sketch vertically. */
+  align-items: center;
+}
+
 .page_button{
     background: #eb94d0;
     
